<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_action_menu"
            android:title="@string/home" />
        <item
            android:id="@+id/Groups"
            android:icon="@drawable/ic_action_menu"
            android:title="@string/groups" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_action_menu"
            android:title="@string/friends" />
        <item
            android:id="@+id/nav_surfspots"
            android:icon="@drawable/ic_action_menu"
            android:title="@string/surfspots" />
    </group>

    <item android:title="Sub items">
        <menu>
            <item
                android:icon="@drawable/ic_action_menu"
                android:title="Sub item 1" />
            <item
                android:icon="@drawable/ic_action_menu"
                android:title="Sub item 2" />
        </menu>
    </item>

</menu>
